src/components/pages/vocabulary/_vocabulary.scss
.vocab {
  display: flex;
  justify-content: center;

  z-index: 0;
  background: center / cover no-repeat;
  min-height: calc(100vh - #{$header-height} - #{$footer-height});

  @media (max-width: $width-mobile) {
    min-height: calc(100vh - #{$header-height} - #{$footer-mobile-height});
  }

  &.a1 {
    background-image: url("./assets/images/vocabulary/background-a1.svg");

    & .words-page__return::after {
      content: "A1";
    }

    & .words-page__games {
      background-image: url("./assets/images/vocabulary/resleeng-a1.png");
    }

    & .word-display__box {
      background-image: url("./assets/images/vocabulary/word-display-background-a1.png");
    }
  }

  &.a2 {
    background-image: url("./assets/images/vocabulary/background-a2.svg");

    & .words-page__return::after {
      content: "A2";
    }

    & .words-page__games {
      background-image: url("./assets/images/vocabulary/resleeng-a2.png");
    }

    & .word-display__box {
      background-image: url("./assets/images/vocabulary/word-display-background-a2.png");
    }
  }

  &.b1 {
    background-image: url("./assets/images/vocabulary/background-b1.svg");

    & .words-page__return::after {
      content: "B1";
    }

    & .words-page__games {
      background-image: url("./assets/images/vocabulary/resleeng-b1.png");
    }

    & .word-display__box {
      background-image: url("./assets/images/vocabulary/word-display-background-b1.png");
    }
  }

  &.b2 {
    background-image: url("./assets/images/vocabulary/background-b2.svg");

    & .words-page__return::after {
      content: "B2";
    }

    & .words-page__games {
      background-image: url("./assets/images/vocabulary/resleeng-b2.png");
    }

    & .word-display__box {
      background-image: url("./assets/images/vocabulary/word-display-background-b2.png");
    }
  }

  &.c1 {
    background-image: url("./assets/images/vocabulary/background-c1.svg");

    & .words-page__return::after {
      content: "C1";
    }

    & .words-page__games {
      background-image: url("./assets/images/vocabulary/resleeng-c1.png");
    }

    & .word-display__box {
      background-image: url("./assets/images/vocabulary/word-display-background-c1.png");
    }
  }

  &.c2 {
    background-image: url("./assets/images/vocabulary/background-c2.svg");

    & .words-page__return::after {
      content: "C2";
    }

    & .words-page__games {
      background-image: url("./assets/images/vocabulary/resleeng-c2.png");
    }

    & .word-display__box {
      background-image: url("./assets/images/vocabulary/word-display-background-c2.png");
    }
  }

  &.hard {
    background-image: url("./assets/images/vocabulary/background-hard.svg");

    & .words-page__return::after {
      content: "Сложные слова";
    }

    & .page-selector,
    & .page-switch,
    & .page-selector-block {
      display: none;
    }

    & .words-page__games {
      background-image: url("./assets/images/vocabulary/resleeng-hard.png");
    }

    & .word-display__box {
      background-image: url("./assets/images/vocabulary/word-display-background-hard.png");
    }
  }

  &__wrapper {
    display: flex;
    align-items: center;
    height: 100%;
    flex: 0 1 100%;
    justify-content: center;
  }

  &__container {
    display: flex;
    justify-content: space-around;
    gap: 30px;
    max-width: 1380px;
    width: 97%;
    margin: 24px auto;
    min-height: calc(100vh - #{$header-height} - #{$footer-height} - 70px);

    @media (max-width: $width-laptop) {
      max-width: 1240px;
      gap: 16px;
    }

    @media (max-width: $width-tablet) {
      flex-direction: column;
      align-items: center;
    }

    @media (max-width: $width-mobile) {
      min-height: calc(100vh - #{$header-height} - #{$footer-mobile-height} - 70px);
    }
  }
}

.colors-a1 {
  --color-main: #FCF1FC;
  --color-btn: #F3DCFC;
  --color-accent: #D189E9;
  --color-dark: #58166E;
  --color-dark-accent: #3A0E48;
  --filter-btn: invert(87%) sepia(19%) saturate(262%) hue-rotate(233deg) brightness(98%) contrast(102%);
  --filter-accent: invert(84%) sepia(32%) saturate(6419%) hue-rotate(218deg) brightness(95%) contrast(93%);
  --filter-dark: invert(12%) sepia(57%) saturate(4414%) hue-rotate(277deg) brightness(85%) contrast(96%);
  --filter-dark-accent: invert(13%) sepia(42%) saturate(2118%) hue-rotate(257deg) brightness(90%) contrast(109%);
}

.colors-a2 {
  --color-main: #E5F9FF;
  --color-btn: #BAEEFF;
  --color-accent: #6ED4F4;
  --color-dark: #0E6885;
  --color-dark-accent: #034256;
  --filter-btn: invert(96%) sepia(78%) saturate(2672%) hue-rotate(171deg) brightness(102%) contrast(103%);
  --filter-accent: invert(91%) sepia(22%) saturate(4959%) hue-rotate(166deg) brightness(102%) contrast(91%);
  --filter-dark: invert(14%) sepia(91%) saturate(4101%) hue-rotate(182deg) brightness(99%) contrast(89%);
  --filter-dark-accent: invert(19%) sepia(25%) saturate(3291%) hue-rotate(162deg) brightness(93%) contrast(98%);
}

.colors-b1 {
  --color-main: #D5F6E2;
  --color-btn: #CEF6D5;
  --color-accent: #79DD8A;
  --color-dark: #085C16;
  --color-dark-accent: #0D3F15;
  --filter-btn: invert(87%) sepia(34%) saturate(177%) hue-rotate(77deg) brightness(103%) contrast(93%);
  --filter-accent: invert(86%) sepia(25%) saturate(753%) hue-rotate(68deg) brightness(90%) contrast(92%);
  --filter-dark: invert(22%) sepia(34%) saturate(3352%) hue-rotate(109deg) brightness(90%) contrast(94%);
  --filter-dark-accent: invert(19%) sepia(38%) saturate(916%) hue-rotate(78deg) brightness(89%) contrast(98%);
}
/* ... */

